# syconf

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.sh
.cache/clangd/index/: main.cpp.0982A6031F522E8B.idx
src/: CMakeLists.txt  actions.cpp  actions.hpp  config.hpp  main.cpp  read_config.cpp  read_config.hpp  reload.cpp  reload.hpp
